--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = "^3.11"
+pydantic = "^2.10.5"
 psycopg = "^3.2.3"
 psycopg-pool = "^3.2.4"
 tenacity = "^9.0.0"
